--- a/priv/gettext/en/LC_MESSAGES/errors.po
+++ b/priv/gettext/en/LC_MESSAGES/errors.po
@@ -8,7 +8,7 @@
 ## to merge POT files into PO files.
 msgid ""
 msgstr ""
-"Language: en\n"<%= if ecto do %>
+"Language: en\n"
 
 ## From Ecto.Changeset.cast/4
 msgid "can't be blank"
@@ -90,4 +90,4 @@ msgid "must be greater than or equal to %{number}"
 msgstr ""
 
 msgid "must be equal to %{number}"
-msgstr ""<% end %>
+msgstr ""
